Fix window overflow

--- a/css/default.css
+++ b/css/default.css
@@ -673,6 +673,7 @@ hr {
     float: left;
 	left: 0;
 	top: 64px;
+	bottom: 0;
 	padding: 0 0.3em 1em 0.3em; /* try some extra padding at the bottom to display all contents (item 3: 1em) */
 	voice-family: inherit;
     max-height: 100%;
@@ -870,6 +871,7 @@ hr {
 	line-height: 1.3; /* value other than 'normal' needed for WinIE */
     position: fixed;
     top: 64px;
+    bottom: 0;
     z-index: -1;
 	margin-left: 10px;
 	margin-right: 10px;
